<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taskassist.StaffMain"
    android:background="@drawable/loginback"

    android:id="@+id/staff"

    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/floor_number"
        app:layout_constraintBottom_toBottomOf="@+id/floorspinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/room_type"
        app:layout_constraintBottom_toBottomOf="@+id/roomtypespinner"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/floorspinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:layout_marginTop="145dp"
        android:text="@string/issue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/issuespinner"
        app:layout_constraintStart_toStartOf="@+id/issuespinner"
        app:layout_constraintTop_toTopOf="@+id/roomtypespinner" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="7dp" />

    <Spinner
        android:id="@+id/floorspinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginTop="88dp"
        app:layout_constraintBottom_toBottomOf="@+id/roomtypespinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:popupBackground="@drawable/spinner"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown"
        />

    <Spinner
        android:id="@+id/roomtypespinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:layout_marginTop="184dp"
        app:layout_constraintBottom_toBottomOf="@+id/issuespinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:popupBackground="@drawable/spinner"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown"
        />

    <Spinner
        android:id="@+id/roomnospinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:popupBackground="@drawable/spinner"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown"
        />

    <Spinner
        android:id="@+id/issuespinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:popupBackground="@drawable/spinner"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_clicked"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/issuespinner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/please_enter_query"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="-" />



</android.support.constraint.ConstraintLayout>